# opencode-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.config/: nextest.toml
crates/: README.md
crates/opencode-bus/: Cargo.toml  README.md
crates/opencode-bus/src/: README.md  bus.rs  event.rs  lib.rs
crates/opencode-cli/: Cargo.toml  README.md
crates/opencode-cli/src/: backend_client.rs  bootstrap.rs  cli.rs  lib.rs  tool_cmd.rs
crates/opencode-cli/src/commands/: mod.rs  providers_list.rs  run.rs  serve.rs  session_list.rs
crates/opencode-cli/tests/: backend_client_contract.rs  cli_help_snapshots.rs  providers_list_integration.rs  run_noninteractive_integration.rs  serve_integration.rs  session_list_integration.rs
crates/opencode-cli/tests/snapshots/: cli_help_snapshots__prompt_help.snap  cli_help_snapshots__providers_list_help.snap  cli_help_snapshots__root_help.snap  cli_help_snapshots__run_help.snap  cli_help_snapshots__serve_help.snap  cli_help_snapshots__session_list_help.snap
crates/opencode-core/: Cargo.toml  README.md
crates/opencode-core/src/: config.rs  config_service.rs  context.rs  dto.rs  error.rs  id.rs  lib.rs  project.rs  tracing.rs
crates/opencode-lsp/: Cargo.toml  README.md
crates/opencode-lsp/src/: lib.rs
crates/opencode-mcp/: Cargo.toml  README.md
crates/opencode-mcp/src/: lib.rs
crates/opencode-plugin/: Cargo.toml  README.md
crates/opencode-plugin/src/: lib.rs
crates/opencode-provider/: Cargo.toml  README.md
crates/opencode-provider/src/: account.rs  anthropic.rs  auth.rs  catalog.rs  error.rs  google.rs  lib.rs  openai.rs  registry.rs  sse.rs  types.rs
crates/opencode-server/: Cargo.toml  README.md
crates/opencode-server/src/: README.md  error.rs  lib.rs  router.rs  state.rs
crates/opencode-server/src/control_plane/: README.md  error.rs  mod.rs  observability.rs  policy.rs  proxy.rs  resolver.rs
crates/opencode-server/src/routes/: README.md  config.rs  event.rs  mod.rs  permission.rs  project.rs  provider.rs  question.rs  session.rs  workspace.rs
crates/opencode-session/: Cargo.toml  README.md
crates/opencode-session/src/: README.md  engine.rs  lib.rs  permission_runtime.rs  question_runtime.rs  run_state.rs  runtime.rs  types.rs
crates/opencode-storage/: Cargo.toml  README.md
crates/opencode-storage/migrations/: 0001_initial.sql  0002_project_repository_foundation.sql
crates/opencode-storage/src/: event_store.rs  lib.rs  pool.rs  store.rs
crates/opencode-storage/src/repo/: account.rs  message.rs  mod.rs  permission.rs  project.rs  project_repository_state.rs  session.rs  todo.rs  workspace.rs
crates/opencode-tool/: Cargo.toml  README.md
crates/opencode-tool/src/: lib.rs  registry.rs  types.rs
crates/opencode-tool/src/common/: ctx.rs  fs.rs  mod.rs  shell.rs  truncate.rs
crates/opencode-tool/src/tools/: bash.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
crates/opencode-tui/: Cargo.toml  README.md
crates/opencode-tui/src/: lib.rs
docs/: MANUAL_TESTING.md  README.md  SESSION_RUNTIME.md
opencode/: Cargo.toml  README.md
opencode/src/: README.md  lib.rs  main.rs
opencode/tests/: command_outcome_contract.rs
scripts/: README.md  coverage.sh
