[workspace]
resolver = "2"
members = [
  "crates/opencode-bus",
  "crates/opencode-cli",
  "crates/opencode-core",
  "crates/opencode-lsp",
  "crates/opencode-mcp",
  "crates/opencode-plugin",
  "crates/opencode-provider",
  "crates/opencode-server",
  "crates/opencode-session",
  "crates/opencode-storage",
  "crates/opencode-tool",
  "crates/opencode-tui",
  "opencode",
]

[workspace.package]
version = "0.14.0"
authors = ["DannyX"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/anomalyco/opencode"
license = "MIT"

# ─── Workspace-level dependencies ────────────────────────────────────────────
[workspace.dependencies]
opencode-bus = { path = "crates/opencode-bus" }
opencode-cli = { path = "crates/opencode-cli" }
# internal crates
opencode-core = { path = "crates/opencode-core" }
opencode-lsp = { path = "crates/opencode-lsp" }
opencode-mcp = { path = "crates/opencode-mcp" }
opencode-plugin = { path = "crates/opencode-plugin" }
opencode-provider = { path = "crates/opencode-provider" }
opencode-server = { path = "crates/opencode-server" }
opencode-session = { path = "crates/opencode-session" }
opencode-storage = { path = "crates/opencode-storage" }
opencode-tool = { path = "crates/opencode-tool" }
opencode-tui = { path = "crates/opencode-tui" }

async-trait = "0.1"
futures = "0.3"
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }

# serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
# error handling
thiserror = "2"

# tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"

time = { version = "0.3", features = ["formatting", "macros", "serde"] }
# ids & time
uuid = { version = "1", features = ["serde", "v4"] }

# config / json
jsonc-parser = { version = "0.32", features = ["serde"] }

axum = { version = "0.8", features = ["macros", "ws"] }
# HTTP
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream"
] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# database
sqlx = { version = "0.8", default-features = false, features = [
  "json",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "sqlite",
  "time",
  "uuid"
] }

# SSE / streams
eventsource-stream = "0.2"

# provider SDK crates
async-openai = { version = "0.34", default-features = false, features = ["rustls", "responses", "chat-completion"] }
async-anthropic = "0.6"

insta = { version = "1", features = ["json"] }
tempfile = "3"
# testing
tokio-test = "0.4"
wiremock = "0.6"

# filesystem traversal / search (used by opencode-tool built-ins)
walkdir = "2"
globset = "0.4"
ignore = "0.4"
regex = "1"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# ─── Workspace lint configuration ────────────────────────────────────────────
[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "warn"
unused_must_use = "deny"

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev]
opt-level = 0
debug = true

# Speed up proc-macro and build-script compile times in dev
[profile.dev.package."*"]
opt-level = 3

# ─── Release profiles ────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false
