[package]
name        = "opencode"
description = "The opencode AI coding agent — Rust binary"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[[bin]]
name = "opencode"
path = "src/main.rs"

[lib]
name = "opencode"
path = "src/lib.rs"

[dependencies]
opencode-core     = { workspace = true }
opencode-cli      = { workspace = true }
opencode-bus      = { workspace = true }
opencode-server   = { workspace = true }
opencode-provider = { workspace = true }
opencode-session  = { workspace = true }
opencode-storage  = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
serde_json        = { workspace = true }
reqwest           = { workspace = true }

[dev-dependencies]
clap              = { workspace = true }
tempfile          = { workspace = true }

[lints]
workspace = true
