[package]
name        = "opencode-bus"
description = "Typed in-process event bus for opencode (tokio::broadcast-backed)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core = { workspace = true }
tokio         = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
insta    = { workspace = true }

[lints]
workspace = true
