[package]
name        = "opencode-cli"
description = "Command-line interface and bootstrap sequence for opencode"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core    = { workspace = true }
opencode-bus     = { workspace = true }
opencode-storage = { workspace = true }
opencode-session = { workspace = true }
opencode-server  = { workspace = true }
clap             = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }
serde            = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
