[package]
name        = "opencode-cli"
description = "Command-line interface and bootstrap sequence for opencode"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core    = { workspace = true }
opencode-bus     = { workspace = true }
opencode-storage = { workspace = true }
opencode-session = { workspace = true }
opencode-server  = { workspace = true }
opencode-provider = { workspace = true }
opencode-tool    = { workspace = true }
clap             = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
axum             = { workspace = true }
reqwest          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tower            = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
insta    = { workspace = true }

[lints]
workspace = true
