[package]
name        = "opencode-lsp"
description = "LSP client for opencode"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }

[lints]
workspace = true
