[package]
name        = "opencode-provider"
description = "LLM provider trait, model registry, and provider implementations for opencode"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core = { workspace = true }
opencode-bus  = { workspace = true }
async-trait   = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
reqwest       = { workspace = true }
eventsource-stream = { workspace = true }
async-openai  = { workspace = true }
async-anthropic = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
