[package]
name        = "opencode-storage"
description = "SQLite/WAL persistence layer for opencode — repositories, migrations, event store"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core = { workspace = true }
opencode-bus  = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
uuid          = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
