[package]
name        = "opencode-tool"
description = "Tool trait, registry, planner, executor, and built-in tools for opencode"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
opencode-core    = { workspace = true }
opencode-bus     = { workspace = true }
opencode-storage = { workspace = true }
async-trait      = { workspace = true }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
walkdir          = { workspace = true }
globset          = { workspace = true }
ignore           = { workspace = true }
regex            = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
